--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
 sonar.organization=posarqsoftwarefiap
 sonar.tests=tests
 
-sonar.python.coverage.reportPaths=.coverage
+sonar.python.coverage.reportPaths=coverage.xml
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=fiap-3SOAT-app-entregador
 #sonar.projectVersion=1.0
