--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+      - name: Install testeing_flask
+        run: pip install flask_testing
       - name: Install tox and any other packages
         run: pip install tox
       - name: Run tox
