--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+      - name: Install requirements
+        run: pip install -r requirements.txt
       - name: Install flask_testing
         run: pip install flask_testing
       - name: Install tox and any other packages
