--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Install requirements
-        run: pip install -r requirements.txt
-      - name: Install flask_testing
-        run: pip install flask_testing
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r tests/requirements.txt
+          
+      # - name: Install flask_testing
+      #   run: pip install flask_testing
         
       - name: Verify installation of flask_testing
         run: |
@@ -28,6 +32,7 @@ jobs:
           
       - name: Install tox and any other packages
         run: pip install tox
+        
       - name: Run tox
         run: tox -e py
       - name: SonarCloud Scan
