--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      MYSQL_HOST: leo-pessoal-do-user-9421695-0.b.db.ondigitalocean.com
-      MYSQL_PASSWORD: AVNS_ap_g-5JOgfWvQdn4cIQ
-      MYSQL_USER: doadmin
+      MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
+      MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      MYSQL_USER: ${{ secrets.MYSQL_USER }}
 
     steps:
       - uses: actions/checkout@v2
