--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,14 @@
 sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
 sonar.organization=posarqsoftwarefiap
 sonar.tests=tests
-
 sonar.python.coverage.reportPaths=coverage.xml
+
+sonar.sources=/entregador
+#sonar.tests=/tests
+#sonar.host.url=https://sonarcloud.io
+#sonar.login=my_sonar_token
+
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=fiap-3SOAT-app-entregador
 #sonar.projectVersion=1.0
