--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=posarqsoftwarefiap
 sonar.tests=tests
 sonar.python.coverage.reportPaths=coverage.xml
 
-sonar.sources=/
+sonar.sources=entregador
 #sonar.tests=/tests
 #sonar.host.url=https://sonarcloud.io
 #sonar.login=my_sonar_token
