--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,21 +1,23 @@
-sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
-sonar.organization=posarqsoftwarefiap
+# Chave do projeto no SonarQube/SonarCloud
+sonar.projectKey=seu_projeto_key
+# Organização no SonarQube/SonarCloud
+sonar.organization=sua_organizacao
+
+# Diretório do código-fonte
+# Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
+sonar.sources=entregador,db,app.py,config.py
+
+# Diretório dos testes
 sonar.tests=tests
 
-sonar.python.coverage.reportPaths=coverage.xml
+# Incluir todos os arquivos Python na análise
+sonar.inclusions=**/*.py
 
-sonar.sources=entregador
-#sonar.tests=/tests
-#sonar.host.url=https://sonarcloud.io
-#sonar.login=my_sonar_token
+# Incluir todos os arquivos de teste Python no diretório 'tests'
+sonar.test.inclusions=tests/**/*.py
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=fiap-3SOAT-app-entregador
-#sonar.projectVersion=1.0
+# Caminho para o relatório de cobertura de código (se aplicável)
+sonar.python.coverage.reportPaths=.coverage
 
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
