--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.inclusions=**/*.py
 sonar.test.inclusions=tests/**/*.py
 
 # Caminho para o relatório de cobertura de código (se aplicável)
-sonar.python.coverage.reportPaths=.coverage
+sonar.python.coverage.reportPaths=coverage.xml
 
 
 
