--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,5 +19,6 @@ sonar.test.inclusions=tests/**/*.py
 # Caminho para o relatório de cobertura de código (se aplicável)
 sonar.python.coverage.reportPaths=coverage.xml
 
-
+#excludes
+sonar.exclusions=**/__init__.py
 
