--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,31 @@
 [tox]
+
 envlist = py39
 skipsdist = True
  
 [testenv]
-setenv =
-    MYSQL_HOST = leo-pessoal-do-user-9421695-0.b.db.ondigitalocean.com
-    MYSQL_PASSWORD = AVNS_ap_g-5JOgfWvQdn4cIQ
-    MYSQL_USER = doadmin
 deps =
     pytest
-    pytest-cov
-commands = pytest --cov=entregador --cov-report=xml --cov-config=tox.ini --cov-branch --disable-warnings -v
+    coverage
+commands =
+    coverage run -m pytest
+    coverage xml
+ 
+[coverage:run]
+relative_files = True
+source = entregador/
+branch = True
+
+
+# envlist = py39
+# skipsdist = True
+ 
+# [testenv]
+# setenv =
+#     MYSQL_HOST = leo-pessoal-do-user-9421695-0.b.db.ondigitalocean.com
+#     MYSQL_PASSWORD = AVNS_ap_g-5JOgfWvQdn4cIQ
+#     MYSQL_USER = doadmin
+# deps =
+#     pytest
+#     pytest-cov
+# commands = pytest --cov=entregador --cov-report=xml --cov-config=tox.ini --cov-branch --disable-warnings -v
