--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ envlist = py39
 skipsdist = True
  
 [testenv]
+setenv =
+    MYSQL_HOST = leo-pessoal-do-user-9421695-0.b.db.ondigitalocean.com
+    MYSQL_PASSWORD = AVNS_ap_g-5JOgfWvQdn4cIQ
+    MYSQL_USER = doadmin
 deps =
     pytest
     coverage
