--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,12 +46,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=posarqsoftwarefiap
-            -Dsonar.organization=PosArqSoftwareFIAP
-            -Dsonar.sources=./entregador
-            -Dsonar.tests=./tests
+        # with:
+        #   args: >
+        #     -Dsonar.projectKey=posarqsoftwarefiap
+        #     -Dsonar.organization=PosArqSoftwareFIAP
+        #     -Dsonar.sources=./entregador
+        #     -Dsonar.tests=./tests
 # projectBaseDir: ./path/to/your/project  # Opcional: ajuste para o diretório base do seu projeto, se não for o root
 # -Dsonar.java.binaries=./build/classes
 
