--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,5 +20,5 @@ sonar.test.inclusions=tests/**/*.py
 sonar.python.coverage.reportPaths=coverage.xml
 
 #excludes
-sonar.entregador.exclusions=**/*__init__.py
+sonar.exclusions=**/__init__.py
 
