--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@
 sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
 # Organização no SonarQube/SonarCloud
 sonar.organization=posarqsoftwarefiap
+sonar.projectVersion=1.0
 
 # Diretório do código-fonte
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
@@ -22,3 +23,6 @@ sonar.python.coverage.reportPaths=coverage.xml
 #excludes
 sonar.exclusions=**/__init__.py
 
+
+# Encoding of the source code
+sonar.sourceEncoding=UTF-8
