--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,7 @@ sonar.projectVersion=1.0
 
 # Diretório do código-fonte
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
-sonar.sources=entregador,db,app.py,config.py
-
+sonar.sources=entregador
 # Diretório dos testes
 sonar.tests=tests
 
