--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,11 +19,11 @@ sonar.test.inclusions=tests/**/*.py
 # Caminho para o relatório de cobertura de código (se aplicável)
 sonar.python.coverage.reportPaths=coverage.xml
 
-#excludes
+# Excluir arquivos __init__.py da análise
 sonar.exclusions=**/__init__.py
 
-
-# Encoding of the source code
+# Encoding do código-fonte
 sonar.sourceEncoding=UTF-8
 
+# Versão do Python
 sonar.python.version=3.8
