--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,29 +1,19 @@
-# Chave do projeto no SonarQube/SonarCloud
-sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
-# Organização no SonarQube/SonarCloud
-sonar.organization=posarqsoftwarefiap
+# Required metadata
+sonar.projectKey=fiap-3SOAT-app-entregador
+sonar.projectName=FIAP 3SOAT App Entregador
 sonar.projectVersion=1.0
 
-# Diretório do código-fonte
-# Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
-sonar.sources=entregador,db,app.py,config.py
-# Diretório dos testes
-sonar.tests=tests
+# Comma-separated paths to directories with sources (required)
+sonar.sources=app.py, config.py, entregador, db
 
-# Incluir todos os arquivos Python na análise
-sonar.inclusions=**/*.py
+# Exclusions
+sonar.exclusions=tests/**, **/__init__.py
 
-# Incluir todos os arquivos de teste Python no diretório 'tests'
-sonar.test.inclusions=tests/**/*.py
-
-# Caminho para o relatório de cobertura de código (se aplicável)
+# Coverage report
 sonar.python.coverage.reportPaths=coverage.xml
 
-# Excluir arquivos __init__.py da análise
-sonar.exclusions=**/__init__.py
+# Python version
+sonar.python.version=3.8  # Substitua pela versão do Python que você está utilizando
 
-# Encoding do código-fonte
+# Encoding of the source code
 sonar.sourceEncoding=UTF-8
-
-# Versão do Python
-sonar.python.version=3.8
