--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
-
 envlist = py39
 skipsdist = True
- 
+
 [testenv]
 setenv =
     MYSQL_HOST = leo-pessoal-do-user-9421695-0.b.db.ondigitalocean.com
@@ -14,11 +13,12 @@ deps =
 commands =
     coverage run -m pytest
     coverage xml
- 
+
 [coverage:run]
 relative_files = True
-source = entregador/, db/
+source = entregador, db
 branch = True
+
 
 
 # envlist = py39
