--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=fiap-3SOAT-app-entregador
-sonar.projectName=FIAP 3SOAT App Entregador
+sonar.projectName=PosArqSoftwareFIAP
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
