--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,29 @@
-# Required metadata
-sonar.projectKey=fiap-3SOAT-app-entregador
-sonar.projectName=PosArqSoftwareFIAP
+# Chave do projeto no SonarQube/SonarCloud
+sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
+# Organização no SonarQube/SonarCloud
+sonar.organization=posarqsoftwarefiap
 sonar.projectVersion=1.0
 
-# Comma-separated paths to directories with sources (required)
-sonar.sources=app.py, config.py, entregador, db
+# Diretório do código-fonte
+# Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
+sonar.sources=entregador,db,app.py,config.py
+# Diretório dos testes
+sonar.tests=tests
 
-# Exclusions
-sonar.exclusions=tests/**, **/__init__.py
+# Incluir todos os arquivos Python na análise
+sonar.inclusions=**/*.py
 
-# Coverage report
+# Incluir todos os arquivos de teste Python no diretório 'tests'
+sonar.test.inclusions=tests/**/*.py
+
+# Caminho para o relatório de cobertura de código (se aplicável)
 sonar.python.coverage.reportPaths=coverage.xml
 
-# Python version
-sonar.python.version=3.8  # Substitua pela versão do Python que você está utilizando
+#excludes
+sonar.exclusions=**/__init__.py
+
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
+
+sonar.python.version=3.8
