--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.test.inclusions=tests/**/*.py
 sonar.python.coverage.reportPaths=coverage.xml
 
 #excludes
-sonar.exclusions=**/__init__.py
+sonar.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
 
 
 # Encoding of the source code
