--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,6 +22,8 @@ sonar.python.coverage.reportPaths=coverage.xml
 #excludes
 sonar.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
 
+#sonar.test.exclusions=
+sonar.test.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
