--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,6 @@ sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
 sonar.organization=posarqsoftwarefiap
  
 sonar.python.coverage.reportPaths=coverage.xml
+
+# Unit tests
+sonar.exclusions=**/test/**/*.py,**/tests/**/*.py
