--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
 sonar.organization=posarqsoftwarefiap
- 
+sonar.projectName=fiap-3SOAT-app-entregador
 sonar.python.coverage.reportPaths=coverage.xml
 
 # Unit tests
