--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
-sonar.organization=posarqsoftwarefiap
-sonar.projectName=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
+sonar.organization=PosArqSoftwareFIAP
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.version=3.10
+#sonar.exclusions=docker-auxiliar-files/*
 
 # Unit tests
-sonar.exclusions=**/test/**/*.py,**/tests/**/*.py
+#sonar.exclusions=**/test/**/*.py,**/tests/**/*.py
