--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,31 @@
+# Chave do projeto no SonarQube/SonarCloud
 sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
-sonar.organization=PosArqSoftwareFIAP
-sonar.python.coverage.reportPaths=coverage.xml
-sonar.python.version=3.10
-#sonar.exclusions=docker-auxiliar-files/*
+# Organização no SonarQube/SonarCloud
+sonar.organization=posarqsoftwarefiap
+sonar.projectVersion=1.0
 
-# Unit tests
-#sonar.exclusions=**/test/**/*.py,**/tests/**/*.py
+# Diretório do código-fonte
+# Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
+sonar.sources=entregador,db,app.py,config.py
+# Diretório dos testes
+sonar.tests=tests
+
+# Incluir todos os arquivos Python na análise
+sonar.inclusions=**/*.py
+
+# Incluir todos os arquivos de teste Python no diretório 'tests'
+sonar.test.inclusions=tests/**/*.py
+
+# Caminho para o relatório de cobertura de código (se aplicável)
+sonar.python.coverage.reportPaths=coverage.xml
+
+#excludes
+sonar.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
+
+#sonar.test.exclusions=
+sonar.test.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
+
+# Encoding of the source code
+sonar.sourceEncoding=UTF-8
+
+sonar.python.version=3.8
