--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,8 +13,8 @@ sonar.sources=.
 sonar.tests=tests
 
 # Incluir todos os arquivos Python na análise
-#sonar.inclusions=**/*.py
-sonar.inclusions=**/*/.py
+sonar.inclusions=**/*.py
+#sonar.inclusions=**/*/.py
 
 # Incluir todos os arquivos de teste Python no diretório 'tests'
 sonar.test.inclusions=tests/**/*.py
