--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectVersion=1.0
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
 #sonar.sources=entregador,db,app.py,config.py
 
-sonar.sources=./
+sonar.sources=src
 # Diretório dos testes
 sonar.tests=tests
 
