--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,13 +8,12 @@ sonar.projectVersion=1.0
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
 #sonar.sources=entregador,db,app.py,config.py
 
-sonar.sources=src
+sonar.sources=.
 # Diretório dos testes
 sonar.tests=tests
 
 # Incluir todos os arquivos Python na análise
 sonar.inclusions=**/*.py
-#sonar.inclusions=**/*/.py
 
 # Incluir todos os arquivos de teste Python no diretório 'tests'
 sonar.test.inclusions=tests/**/*.py
