--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r tests/requirements.txt
           
-      - name: Install virtual env
-        run: |
-          python -m pip install virtualenv
-          python -m venv testeenv
-          . testeenv/bin/activate
-
+      # - name: Install flask_testing
+      #   run: pip install flask_testing
+        
       - name: Verify installation of flask_testing
         run: |
           pip show flask_testing
