--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,9 @@ sonar.inclusions=**/*.py
 sonar.test.inclusions=tests/**/*.py
 
 # Caminho para o relatório de cobertura de código (se aplicável)
-sonar.coverage.jacoco.xmlReportPaths=coverage-reports/coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
+# sonar.coverage.jacoco.xmlReportPaths=coverage.xml
+
 #excludes
 sonar.exclusions=entregador/__init__.py,db/__init__.py,config.py/__init__.py
 
