--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,4 @@ setenv =
 deps =
     pytest
     pytest-cov
-commands = pytest --cov=fiap-3SOAT-app-entregador --cov-report=xml:coverage.xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=entregador --cov-report=xml --cov-config=tox.ini --cov-branch
