--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,13 +6,13 @@ sonar.projectVersion=1.0
 
 # Diretório do código-fonte
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
-sonar.sources=entregador,db,app.py,config.py
+sonar.sources=./
 
 # Diretório dos testes
 sonar.tests=tests
 
 # Incluir todos os arquivos Python na análise
-sonar.inclusions=**/*.py
+sonar.inclusions=./*.py
 
 # Incluir todos os arquivos de teste Python no diretório 'tests'
 sonar.test.inclusions=tests/**/*.py
