--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.sources=./
 sonar.tests=tests
 
 # Incluir todos os arquivos Python na análise
-#sonar.inclusions=**/*.py
+sonar.inclusions=**/*.py
 
 # Incluir todos os arquivos de teste Python no diretório 'tests'
 sonar.test.inclusions=tests/**/*.py
@@ -22,10 +22,11 @@ sonar.python.coverage.reportPaths=coverage.xml
 # sonar.coverage.jacoco.xmlReportPaths=coverage.xml
 
 #excludes
-sonar.exclusions=entregador/__init__.py,db/__init__.py,config.py/__init__.py
+
+sonar.exclusions=**/__init__.py
 
 #sonar.test.exclusions=
-sonar.test.exclusions=entregador/__init__.py,db/__init__.py,config.py/__init__.py
+sonar.test.exclusions=**/__init__.py
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
