--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,9 @@ sonar.projectVersion=1.0
 
 # Diretório do código-fonte
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
-sonar.sources=entregador,db,app.py,config.py
+#sonar.sources=entregador,db,app.py,config.py
 
+sonar.sources=.
 # Diretório dos testes
 sonar.tests=tests
 
@@ -19,13 +20,12 @@ sonar.test.inclusions=tests/**/*.py
 
 # Caminho para o relatório de cobertura de código (se aplicável)
 sonar.python.coverage.reportPaths=coverage.xml
-# sonar.coverage.jacoco.xmlReportPaths=coverage.xml
 
 #excludes
-sonar.exclusions=entregador/__init__.py,db/__init__.py,config.py/__init__.py
+sonar.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
 
 #sonar.test.exclusions=
-sonar.test.exclusions=entregador/__init__.py,db/__init__.py,config.py/__init__.py
+sonar.test.exclusions=**/entregador/__init__.py,**/db/__init__.py,**/config.py/__init__.py
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
