--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,13 @@
 # Chave do projeto no SonarQube/SonarCloud
 sonar.projectKey=PosArqSoftwareFIAP_fiap-3SOAT-app-entregador
+
 # Organização no SonarQube/SonarCloud
 sonar.organization=posarqsoftwarefiap
 sonar.projectVersion=1.0
 
 # Diretório do código-fonte
 # Como parece que o código-fonte está espalhado, incluiremos todos os diretórios relevantes
-sonar.sources=./
+sonar.sources=src
 
 # Diretório dos testes
 sonar.tests=tests
@@ -14,21 +15,25 @@ sonar.tests=tests
 # Incluir todos os arquivos Python na análise
 sonar.inclusions=**/*.py
 
-# Incluir todos os arquivos de teste Python no diretório 'tests'
-sonar.test.inclusions=tests/**/*.py
-
 # Caminho para o relatório de cobertura de código (se aplicável)
 sonar.python.coverage.reportPaths=coverage.xml
 # sonar.coverage.jacoco.xmlReportPaths=coverage.xml
 
 #excludes
-
-sonar.exclusions=**/__init__.py
-
-#sonar.test.exclusions=
-sonar.test.exclusions=**/__init__.py
+sonar.exclusions=**/__pycache__/**,**/*.pyc
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
-
 sonar.python.version=3.8
+
+
+
+; sonar.projectKey=teste
+; sonar.organization=none
+; sonar.host.url=http:localhost:9000
+; sonar.login=sqa_7b802612856fdff45b2f3bf2a7bdce6b616d2bb0
+
+; sonar.sources=src
+; sonar.tests=tests
+; sonar.python.coverage.reportPaths=coverage.xml
+; sonar.exclusions=**/__pycache__/**,**/*.pyc
