--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,13 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+
+      - name: Install virtual env
+        run: |
+          python -m pip install virtualenv
+          python -m venv testeenv
+          . testeenv/bin/activate
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
