--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,4 @@ setenv =
 deps =
     pytest
     pytest-cov
-commands = python -m pytest --cov=entregador --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = python -m pytest --cov=src --cov-report=xml --cov-config=tox.ini --cov-branch
