--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.python.coverage.reportPaths=coverage.xml
 # sonar.coverage.jacoco.xmlReportPaths=coverage.xml
 
 #excludes
-sonar.exclusions=**/__pycache__/**,**/*.pyc
+sonar.exclusions=**/__pycache__/**,**/*.pyc,**/__init__.py
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
