--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=src
 sonar.tests=tests
 
 # Incluir todos os arquivos Python na análise
-sonar.inclusions=**/*.py
+; sonar.inclusions=**/*.py
 
 # Caminho para o relatório de cobertura de código (se aplicável)
 sonar.python.coverage.reportPaths=coverage.xml
