--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,9 @@ jobs:
 
       - name: Run coverage
         env:
-          MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
+          MYSQL_HOST: leo-pessoal-do-user-9421695-0.b.db.ondigitalocean.com
+          MYSQL_PASSWORD: AVNS_ap_g-5JOgfWvQdn4cIQ
+          MYSQL_USER: doadmin
         run: |
           pip install pytest-cov
           python3 -m coverage run -m unittest discover -s tests
